# private-assistant-web-ui

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md
.copier/: .copier-answers.yml
.devcontainer/: compose.yml  devcontainer.json
.devcontainer/config/: mosquitto.conf
.github/workflows/: backend-container-build-pr.yml  backend-container-build-push.yml  backend-python_code_quality.yml  frontend-container-build-pr.yml  frontend-container-build-push.yml  frontend_code_quality.yml
backend/: .env.example  Containerfile  README.md  pyproject.toml
backend/app/: crud.py  main.py  models.py  models_commons_api.py  prestart.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 7a3fe1350b39_initial_schema.py
backend/app/api/: deps.py  main.py
backend/app/api/routes/: device_types.py  devices.py  immich_sync_job.py  login.py  monitoring.py  picture_display.py  private.py  rooms.py  users.py  utils.py
backend/app/api/schemas/: __init__.py  health.py  immich_sync_job.py  picture_display.py
backend/app/core/: config.py  db.py  jwks_client.py  minio_client.py  mqtt.py  security.py
backend/scripts/: __init__.py  create_tables.py  prestart.sh
backend/scripts/seed/: __init__.py  data_generators.py  factories.py  seed_database.py
backend/tests/: conftest.py  test_health.py
frontend/: .env.example  .gitignore  Containerfile  entrypoint.sh  index.html  nginx.conf  package-lock.json  package.json
frontend/scripts/: generate-config.js
frontend/src/: main.tsx  routeTree.gen.ts
frontend/src/client/: schemas.gen.ts  sdk.gen.ts  types.gen.ts
frontend/src/components/Admin/: DeleteUser.tsx  UserActionsMenu.tsx
frontend/src/components/Common/: DataTable.tsx  Footer.tsx  Logo.tsx
frontend/src/components/DeviceTypes/: AddDeviceType.tsx  DeleteDeviceType.tsx  DeviceTypeActionsMenu.tsx  EditDeviceType.tsx  columns.tsx
frontend/src/components/Devices/: AddDevice.tsx  DeleteDevice.tsx  DeviceActionsMenu.tsx  EditDevice.tsx  columns.tsx
frontend/src/components/ImmichSyncJobs/: AddSyncJob.tsx  DeleteSyncJob.tsx  EditSyncJob.tsx  SyncJobsTab.tsx
frontend/src/components/Monitoring/: columns.tsx
frontend/src/components/Pending/: PendingDeviceTypes.tsx  PendingDevices.tsx  PendingMonitoring.tsx  PendingPictureDisplay.tsx  PendingRooms.tsx
frontend/src/components/PictureDisplay/: DeleteImage.tsx  EditImage.tsx  ImageActionsMenu.tsx  ImageCard.tsx  UploadImage.tsx
frontend/src/components/Rooms/: AddRoom.tsx  DeleteRoom.tsx  EditRoom.tsx  RoomActionsMenu.tsx  columns.tsx
frontend/src/components/Sidebar/: AppSidebar.tsx
frontend/src/components/ui/: checkbox.tsx  key-value-editor.tsx  pattern-array-input.tsx  switch.tsx  tabs.tsx
frontend/src/config/: runtime-config.ts
frontend/src/lib/: oidc.ts
frontend/src/routes/: login.tsx  oauth-callback.tsx
(+8 files in other folders)
